# hcloud-project-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  action.yaml  actions-cleanup.sh  actions-entrypoint.sh
.github/workflows/: clippy.yaml  image.yaml  test-self.yaml
src/: main.rs
