[package]
name = "hcloud-project-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
color-eyre = "0.5.11"
eyre = "0.6.5"
form_urlencoded = "1.0.1"
reqwest = { version = "0.11.3", features = ["native-tls-alpn", "json", "cookies"] }
select = "0.5.0"
serde = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
url = "2.2.2"
